--- a/src/carconnectivity_plugins/webui/ui/templates/log.html
+++ b/src/carconnectivity_plugins/webui/ui/templates/log.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 Last {{ car_connectivity.log_storage.storage|length }} log entries:
-<textarea class="form-control form-control-sm" id="exampleFormControlTextarea1" readonly style="overflow-y:scroll; height: 800px;">
+<textarea class="form-control form-control-sm  bg-dark text-light" id="exampleFormControlTextarea1" readonly style="overflow-y:scroll; height: 800px;">
 {% for log_record in car_connectivity.log_storage.storage|reverse %}
 {{ formatter.format(log_record) }}
 {% endfor %}
