--- a/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
+++ b/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
@@ -81,9 +81,11 @@
       <li class="nav-item">
         <a class="nav-link" data-bs-toggle="tab" href="#lights">Lights</a>
       </li>
+      {% if hasattr(vehicle, 'charging') %}
       <li class="nav-item">
         <a class="nav-link" data-bs-toggle="tab" href="#charging">Charging</a>
       </li>
+      {% endif %}
       <li class="nav-item">
         <a class="nav-link" data-bs-toggle="tab" href="#climatization">Climatization</a>
       </li>
@@ -248,6 +250,7 @@
             </table>
           </p>
         </div>
+        {% if hasattr(vehicle, 'charging') %}
         <div class="tab-pane" id="charging">
           <p class="card-text">
             <table class="table">
@@ -270,6 +273,7 @@
             </table>
           </p>
         </div>
+        {% endif %}
         <div class="tab-pane" id="climatization">
           <p class="card-text">
             <table class="table">
