improve output rendering

--- a/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
+++ b/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
@@ -113,7 +113,7 @@
                 {% if child.enabled and child.id not in ['images', 'commands', 'specification', 'software', 'doors', 'windows', 'lights', 'drives', 'charging', 'climatization', 'maintenance', 'position'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -135,7 +135,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -157,7 +157,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -179,7 +179,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -201,7 +201,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -223,7 +223,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -245,7 +245,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -268,7 +268,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -291,7 +291,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -313,7 +313,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
@@ -335,7 +335,7 @@
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
-                  <td>{{child}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
                 </tr>
                 {% endif %}
                 {% endfor %}
