--- a/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
+++ b/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
@@ -90,6 +90,9 @@
         <a class="nav-link" data-bs-toggle="tab" href="#climatization">Climatization</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" data-bs-toggle="tab" href="#window_heating">Window Heating</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" data-bs-toggle="tab" href="#maintenance">Maintenance</a>
       </li>
       <li class="nav-item">
@@ -288,6 +291,28 @@
               </thead>
               <tbody>
                 {% for child in vehicle.climatization.children %}
+                {% if child.enabled and child.id not in ['commands'] %}
+                <tr>
+                  <td>{{child.id}}</td>
+                  <td>{{format_cc_element(child, '', linebreak=true)}}</td>
+                </tr>
+                {% endif %}
+                {% endfor %}
+              </tbody>
+            </table>
+          </p>
+        </div>
+        <div class="tab-pane" id="window_heating">
+          <p class="card-text">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Attribute</th>
+                  <th scope="col">Value</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for child in vehicle.window_heatings.children %}
                 {% if child.enabled and child.id not in ['commands'] %}
                 <tr>
                   <td>{{child.id}}</td>
