--- a/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
+++ b/src/carconnectivity_plugins/webui/ui/templates/garage/vehicle.html
@@ -133,7 +133,7 @@
               </thead>
               <tbody>
                 {% for child in vehicle.children %}
-                {% if child.enabled and child.id not in ['images', 'commands', 'specification', 'software', 'doors', 'windows', 'lights', 'drives', 'charging', 'climatization', 'maintenance', 'position'] %}
+                {% if child.enabled and child.id not in ['images', 'commands', 'specification', 'software', 'doors', 'windows', 'lights', 'drives', 'charging', 'climatization', 'window_heating', 'maintenance', 'position'] %}
                 <tr>
                   <td>{{child.id}}</td>
                   <td>{{format_cc_element(child, '', linebreak=true)}}</td>
