enable links in tables in jquery

--- a/src/carconnectivity_plugins/webui/ui/static/css/style.css
+++ b/src/carconnectivity_plugins/webui/ui/static/css/style.css
@@ -33,3 +33,7 @@
   height: 250px;  /* or as desired */
   width: 100%;  /* This means "100% of the width of its container", the .col-md-8 */
 }
+
+[data-href] {
+    cursor: pointer;
+}
