--- a/src/carconnectivity_plugins/webui/ui/templates/base.html
+++ b/src/carconnectivity_plugins/webui/ui/templates/base.html
@@ -23,6 +23,12 @@
         element.innerHTML = new Date(element.innerHTML).toString();
       });
     });
+
+    jQuery(document).ready(function($) {
+        $('*[data-href]').on('click', function() {
+            window.location = $(this).data("href");
+        });
+    });
     </script>
   {% block head %}
   {% endblock %}
